--- a/style.css
+++ b/style.css
@@ -1,31 +1,341 @@
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+
+body{
+    margin: 0;
+    font-family: 'poppins',sans-serif;
+    background-color: #060606bf;
+    color: white;
+    
+}
 *{
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
-	font-family: 'Courier New', Courier, monospace;
+    scroll-behavior: smooth; 
 }
-body {
-	padding: 0;
-	background-color: rgba(0,0,0,.8);
-	margin: 0;
+.container{
+    max-width: 1140px;
+    margin: auto;
 }
-.container {
-	position: relative;
-	margin-top: 150px;
-	display: flex;
-	justify-content: center;
+.row{
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.cont1{
+    margin: 13px;
+}
+.cont:hover{
+    background-color: tomato;
+    color: white;
+    font-weight: bolder;
+}
+.section-title{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.contact .section-title{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+.section-title h1{
+    display: inline-block;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    margin: 0 0 5px;
+    position: relative;
+}
+.p {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 300;
+    padding: 32px;
+    width: 600px;
+    letter-spacing: 2.5px;
+}
+.section-title h1:before{
+    content: '';
+    left: 0;
+    position: absolute;
+    height: 2px;
+    right: 32%;
+    background-color: #febd01;
+    bottom: 0px;
+}
+.text-center{
+    text-align: center!important;
+}
+.text-right{
+    text-align: right!important;
+}
+.portfolio, .Testimonials, .contact,.about{
+    padding: 30px 7px;
+}
+.portfolio .section-title h1:before,.Testimonials .section-title h1:before, .contact .section-title h1:before, .sub-section  .section-title h1:before{
+    left: 30%;
+}
+.portfolio .filter-buttons, .Testimonials .filter-buttons{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+.portfolio .filter-buttons ul, .Testimonials .filter-buttons ul{
+    list-style: none;
+    text-align: center;
+    padding: 0;
+}
+.portfolio .filter-buttons ul li, .Testimonials .filter-buttons ul li{
+
+    font-weight: 500;
+    font-size: 16px;
+    display: inline-block;
+    margin: 0px 8px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding-bottom: 0px;
+    padding: 5px;
+}
+.portfolio .filter-buttons ul li.active, .Testimonials .filter-buttons ul li.active{
+    color: #febd01;
+    border-bottom: 2px solid #febd01;
+}
+.portfolio .portfolio-gallery, .Testimonials .portfolio-gallery1{
+    flex: 0 0 100%;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.portfolio .portfolio-gallery .item{
+    flex: 0 0 45%;
+    max-width: 45%;
+    height: 335px;
+    position: relative;   
+}
+.portfolio .portfolio-gallery .item .inner{
+    position: relative;
+    height: 87%;
+}
+.portfolio .portfolio-gallery .item img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    transition: 1s;
+    opacity: 0.7;
+}
+
+.portfolio .portfolio-gallery .item img:hover{
+    opacity: 1;
+}
+ 
+.texts{
+    display: flex;
+  justify-content: space-evenly;
+  font-family: 'Poppins', sans-serif;
+  font-size: x-large;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+
+.sub-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 80px;
+}
+
+/*Hero Section*/
+#mysection{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.hero-title{
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    margin: 2rem 1rem;
+    margin-bottom: 0;
+
+}
+.hero-title h1{
+    font-size: 2.5rem;
+}
+.hero-title h1 span{
+    color: tomato;
+}
+.hero-title p{
+    font-size: 1rem;
+    color: #b7b7b7;
+}
+.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btns button{
+    width: 12rem;
+    height: 4rem;
+    outline: none;
+    border: 2px solid tomato;
+    border-radius: 25px 0;
+    color: white;
+    letter-spacing: 2px;
+    font-size: 1rem;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.hear-me{
+    background: tomato;
+}
+.download-cv{
+    background: none;
+}
+.download-cv:hover{
+    background: tomato;
+    transition: .3s;
+}
+.scroll{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 10rem;
+}
+.shape{
+    height: 20px;
+    width: 20px;
+    border: 2px solid #fff;
+    transform: rotate(45deg);
+    margin-bottom: 1rem;
+    border-top: 0;
+    border-left: 0;
+    animation: shine 2s ease infinite;
+}
+@keyframes shine{
+    0%{
+        opacity: .2;
+    }
+    25%{
+        opacity: .3;
+    }
+    50%{
+        opacity: .5;
+    }
+    75%{
+        opacity: .7;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@media only screen and (max-width:1200px){
+    .hero-title h1{
+        font-size: 2rem;
+        text-align: center;
+    }
+    .hero-title p{
+        font-size: .8rem;
+    }
+    .btns{
+        flex-direction: column;
+    }
+    .btns button{
+        margin-bottom: 1rem;
+        margin-left: 0;
+    }
+    .scroll{
+        height: 7rem;
+    }
+}
+
+/*responsive nature*/
+@media(max-width:1200px){
+    .texts{
+        display: flex;
+      justify-content: space-evenly;
+      font-family: 'Poppins', sans-serif;
+      font-size: large;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    .Testimonials .portfolio-gallery1{
+        max-height: 50vh;
+        overflow-y: auto;
+    }
+    .p {
+        padding:0;
+        padding-bottom: 20px;
+        width: auto;
+    }
+    .sub-section{
+        padding: 26px 10px 26px 10px;
+    }
+}
+@media(max-width:767px){
+  
+    .portfolio .portfolio-gallery .item{
+        flex:0 0 50% ;
+        max-width: 50%;
+        position: relative;
+        padding:8px ;
+    }
+    .texts{
+        display: flex;
+      justify-content: space-evenly;
+      font-family: 'Poppins', sans-serif;
+      font-size: large;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    .Testimonials .portfolio-gallery1{
+        max-height: 50vh;
+    }
+  
+}
+@media(max-width:500px){
+  
+    .portfolio .portfolio-gallery .item{
+        flex:0 0 100% ;
+        max-width: 100%; 
+    }
+    .texts{
+        display: flex;
+        justify-content: space-evenly;
+        font-family: 'Poppins', sans-serif;
+        font-size: large;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+footer {
+    background-color: rgba(0,0,0,1);
+    color: white;
+    text-align: center;
+    padding: 40px;
+    max-height: 100px;
+}
+
+/*navbar menu and stuff*/
 nav {
 	position: fixed;
 	z-index: 10;
 	left: 0;
 	right: 0;
 	top: 0;
-	font-family: 'Montserrat', sans-serif;
 	padding: 0 5%;
-	height: 100px;
-	background-color: black;
+    height: 10vh;
+	background-color: rgb(2, 2, 2);
+
 }
 nav .logo {
 	float: left;
@@ -76,78 +386,6 @@ nav .icon-burger .line {
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
-#inputContent{
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	height: 100px;
-}
-
-#searchs{
-	height: 56px;
-    margin-right: 46px;
-    width: 45%;
-    border-radius: 20px;
-    padding: 10px;
-	outline: none;
-}
-
-#submit{
-	height: 56px;
-	border-radius: 10px 0 10px 0;
-	padding: 10px;
-}
-
-#output{
-	overflow-y: auto;
-    width: 1100px;
-    height: 600px;
-    background-color: grey;
-}
-
-#out{
-	display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    overflow-y: auto;
-}
-
-
-#o{
-	margin-top: 13px;
-    margin-left: 6px;
-    margin-bottom: 10px;
-}
-
-#out .containe{
-	
-	width: 100px;
-	margin: 70px 70px 70px 70px;
-}
-
-
-.box{
-	width: 40px;
-	height: 40px;
-	background-color: #008cbc;
-	display: inline-block;
-	animation: pulse 0.6s ease-in infinite alternate;
-}
-.box2, .box3{
-	animation-delay: 0.6s;
-}
-
-@Keyframes pulse{
-	100%{
-		opacity: 0;
-	}
-}
-
-#stuff{
-	color: white;
-	text-align: center;
-	font-size: 50px;
-}
 
 @media screen and (max-width: 768px) {
 	nav .logo {
@@ -190,28 +428,33 @@ nav .icon-burger .line {
 	nav :checked ~ .icon-burger .line:nth-child(2) {
 		opacity: 0;
 	}
-
-	#inputContent{
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		height: 80px;
-	}
-	
-	#searchs{
-		margin-right: 20px;
-	}
-
-	#stuff{
-		font-size: 20px;
-	}
+	.row1{
+        grid-template-columns: 1fr;
+    }
+    .information{
+        /*height: 475px;*/
+        overflow-y: auto;
+    }
 
 }
+.menu{
+    width: 10vh;
+}
 
-footer {
-    background-color: rgba(0,0,0,1);
-    color: white;
+/*About Me*/
+
+.heade{
     text-align: center;
-    padding: 40px;
-    max-height: 100px;
+    margin-bottom: 25px;
+}
+
+.headshot {
+    width: 300px;
+    border-radius: 150px;
+    margin-left: 80px;
+}
+
+.headshot-container {
+    display: flex;
+    align-items: center;
 }
